[gd_scene load_steps=18 format=3 uid="uid://dabsgcpt5x125"]

[ext_resource type="Script" path="res://scenes/ui/meta_upgrade_card.gd" id="1_0o6ny"]
[ext_resource type="PackedScene" uid="uid://t51kmm36s34j" path="res://scenes/component/random_stream_player_component.tscn" id="2_mva6x"]
[ext_resource type="AudioStream" uid="uid://bevuva027d0fj" path="res://assets/audio/switch1.ogg" id="3_f5xpa"]
[ext_resource type="AudioStream" uid="uid://4hahqdfb0kta" path="res://assets/audio/switch2.ogg" id="4_l22bs"]
[ext_resource type="AudioStream" uid="uid://dhxvsbiqr6mfw" path="res://assets/audio/switch3.ogg" id="5_hcsj7"]
[ext_resource type="AudioStream" uid="uid://boh6gl60gmirk" path="res://assets/audio/switch4.ogg" id="6_ct6jm"]
[ext_resource type="AudioStream" uid="uid://clcibat322b3t" path="res://assets/audio/switch5.ogg" id="7_k0vei"]
[ext_resource type="AudioStream" uid="uid://bvlwjrlgvx8jj" path="res://assets/audio/switch6.ogg" id="8_4q2h2"]
[ext_resource type="AudioStream" uid="uid://mu2d32niwn2a" path="res://assets/audio/switch7.ogg" id="9_kw83i"]
[ext_resource type="AudioStream" uid="uid://dyx413goorl47" path="res://assets/audio/switch8.ogg" id="10_nsx8u"]
[ext_resource type="AudioStream" uid="uid://csj1v7alfkgn7" path="res://assets/audio/switch9.ogg" id="11_4mavw"]
[ext_resource type="AudioStream" uid="uid://h7pxkxvlv3ux" path="res://assets/audio/switch10.ogg" id="12_b614j"]
[ext_resource type="Texture2D" uid="uid://cmjqkgndvnc6" path="res://scenes/game_object/experience_vail/expirience_vail.png" id="13_0lkva"]

[sub_resource type="Animation" id="Animation_tuomf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_wxx6y"]
resource_name = "selected"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.4),
"transitions": PackedFloat32Array(1, 2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0872665, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ClickPlayerComponent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6e40o"]
_data = {
"RESET": SubResource("Animation_tuomf"),
"selected": SubResource("Animation_wxx6y")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k3mgx"]
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.458824, 0.890196, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)

[node name="MetaUpgradeCard" type="PanelContainer" groups=["meta_upgrade_card"]]
custom_minimum_size = Vector2(170, 0)
pivot_offset = Vector2(75, 75)
script = ExtResource("1_0o6ny")

[node name="ClickPlayerComponent" parent="." instance=ExtResource("2_mva6x")]
streams = Array[AudioStream]([ExtResource("3_f5xpa"), ExtResource("4_l22bs"), ExtResource("5_hcsj7"), ExtResource("6_ct6jm"), ExtResource("7_k0vei"), ExtResource("8_4q2h2"), ExtResource("9_kw83i"), ExtResource("10_nsx8u"), ExtResource("11_4mavw"), ExtResource("12_b614j")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6e40o")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"AlternatePanelContainer"

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_font_sizes/font_size = 32
text = "test label"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
text = "write some description here as long as a long description"
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ProgressLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_type_variation = &"BlueOutlineLabel"
text = "50/200"

[node name="CountLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"BlueOutlineLabel"
text = "x0"
horizontal_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_k3mgx")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/Control"]
layout_mode = 2
offset_left = -7.0
offset_top = -5.0
offset_right = 9.0
offset_bottom = 11.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
texture = ExtResource("13_0lkva")

[node name="PurchaseButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Purchase"
